--- a/vis_FSC.ipynb
+++ b/vis_FSC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,14 +54,14 @@
     "\n",
     "if not exists(anno_file) or not exists(im_dir):\n",
     "    print(\"Make sure you set up the --data-path correctly.\")\n",
-    "    print(\"Current setting is {}, but the image dir and annotation file do not exist.\".format(args.data_path))\n",
+    "    print(\"Current setting is {}, but the image dir and annotation file do not exist.\".format(data_path))\n",
     "    print(\"Aborting the evaluation\")\n",
     "    assert False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +179,37 @@
     "plt.show()\n",
     "plt.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show segment results\n",
+    "color = [\n",
+    "    [30,144,255], # aorta\n",
+    "    [0,255,0],    # gallbladder\n",
+    "    [255,0,0],    # left kidney\n",
+    "    [0,255,255], # right kidney\n",
+    "    [255,0,255],  # liver\n",
+    "    [255,255,0],  # pancreas\n",
+    "    [128,0,255],  # spleen\n",
+    "    [255,128,0],  # stomach\n",
+    "]\n",
+    "cnt=0    \n",
+    "plt.figure(figsize=(10,10))\n",
+    "plt.imshow(image)    \n",
+    "plt.axis('off')\n",
+    "box = np.zeros_like(image)\n",
+    "for i in masks:\n",
+    "    seg = i['segmentation'].reshape(i['segmentation'].shape[0],i['segmentation'].shape[1],1)#.repeat(3,axis=2)\n",
+    "    box = np.where(seg,color[cnt],box)\n",
+    "    cnt += 1\n",
+    "    cnt %= len(color)\n",
+    "plt.imshow(box,alpha=0.5)\n",
+    "show_anns(masks)"
+   ]
   }
  ],
  "metadata": {
@@ -197,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
